--- a/Proyec1BD/demo/src/main/resources/templates/empleados.html
+++ b/Proyec1BD/demo/src/main/resources/templates/empleados.html
@@ -31,8 +31,11 @@
         </div>
 
         <div class="text-center mt-4">
+            <a href="/empleados" class="btn btn-primary">Orden Ascendente</a>
+            <a href="/empleados?orden=desc" class="btn btn-primary">Orden Descendente</a>
             <a href="/empleados/nuevo" class="btn btn-primary btn-lg">Agregar Empleado</a>
         </div>
+        
     </div>
 
 </body>
