--- a/Proyec1BD/demo/src/main/resources/templates/empleados.html
+++ b/Proyec1BD/demo/src/main/resources/templates/empleados.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-light">
-
+    <!-- Mostrar mensaje de éxito si existe -->
+    <div th:if="${mensaje}" class="alert alert-success">
+        <p th:text="${mensaje}"></p>
+    </div>
     <div class="container mt-5">
         <h2 class="text-center mb-4">Lista de Empleados</h2>
 
